# routelens

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PRODUCT.md  README.md  THIRD-PARTY-NOTICES.md  pyproject.toml
deploy/: routelens-aggregator.service  routelens-spacescan.service  routelens-spacescan.timer
docs/: HANDOFF_SUMMARY.md  backend_design.md  deployment-vps-01.md  deployment_handoff.md
src/routelens/: aggregator.py  ai.py  app.py  checkers.py  checks.py  cli.py  collector.py  collectors.py  companies.py  countries.py  dashboards.py  insights.py  query.py  ripestat.py  sources.py  spacescan.py  store.py  uk.py  weather.py  wsgi.py
src/routelens/static/: world.geojson
src/routelens/templates/: about.html  base.html  dashboard.html  pulse.html  query.html  resource.html
src/routelens/templates/dashboards/: _layout.html  address_space.html  asn_profiles.html  asns.html  collectors.html  companies.html  countries.html  flaps.html  linx.html  origin_changes.html  rpki.html  table_growth.html  transit.html  weather.html
src/routelens/templates/partials/: _explain_modal.html  _live_league.html  address_space.html  asn_league.html  asn_peeringdb.html  asn_prefixes.html  asn_rpki.html  (+19 more)
tests/: test_aggregator.py  test_ai.py  test_app.py  test_checks.py  test_cli.py  test_collector.py  test_companies.py  test_dashboards.py  test_http_tls.py  test_insights.py  test_map_api.py  test_pulse.py  test_query.py  test_query_routes.py  test_ripestat.py  test_seo.py  test_sources.py  test_spacescan.py  test_store.py  test_theme.py  test_weather.py
