[project]
name = "routelens"
version = "0.1.0"
description = "BGP, DNS and route health dashboard for NextHop Lab"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0",
  "dnspython>=2.6",
  "requests>=2.32",
  "gunicorn>=22.0",
  "websockets>=16.1",
  "mistralai>=2.6.0,<3",
]

[project.scripts]
routelens-check = "routelens.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.package-data]
routelens = ["templates/*.html", "templates/partials/*.html", "templates/dashboards/*.html", "static/*.geojson"]
