[project]
name = "routelens"
version = "0.1.0"
description = "Live network observability tool for the Internet's core routing"
requires-python = ">=3.11"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Framework :: Flask",
]
dependencies = [
  "flask>=3.0",
  "dnspython>=2.6",
  "requests>=2.32",
  "gunicorn>=22.0",
  "websockets>=16.1",
  "mistralai>=2.6.0,<3",
]

[project.scripts]
routelens-check = "routelens.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.package-data]
routelens = ["templates/*.html", "templates/partials/*.html", "templates/dashboards/*.html", "static/*.geojson", "static/*.svg", "static/*.png", "static/fonts/*.woff2"]
